Fix ViewHeader width on narrow screens. (#1715)
Also fix issue with DropdownButton border radius.

--- a/app/assets/src/components/views/phylo_tree/phylo_tree_list_view.scss
+++ b/app/assets/src/components/views/phylo_tree/phylo_tree_list_view.scss
@@ -3,7 +3,8 @@
 
 .phyloTreeListView {
   .viewHeader {
-    margin: 40px 20px;
+    margin-top: 40px;
+    margin-bottom: 40px;
   }
 
   .narrowContainer {
